--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
+    android:animateLayoutChanges="true"
     android:background="#ACC5E1"
     android:orientation="vertical">
 
@@ -163,7 +164,8 @@
                         android:layout_width="wrap_content"
 
                         android:layout_height="0dp"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:animateLayoutChanges="true">
 
                     </androidx.viewpager2.widget.ViewPager2>
 
