--- a/app/src/main/res/layout/rodents_item_list.xml
+++ b/app/src/main/res/layout/rodents_item_list.xml
@@ -30,6 +30,7 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -62,32 +63,71 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|top"
-            android:orientation="horizontal">
+            android:orientation="vertical" >
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView_rodent"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:elevation="32dp"
-                android:gravity="center"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center|top"
+                android:orientation="horizontal">
 
-                app:cardBackgroundColor="#FFFFFF"
-                app:cardCornerRadius="60dp"
-                app:cardElevation="0dp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView_rodent"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:elevation="32dp"
+                    android:gravity="center"
+
+                    app:cardBackgroundColor="#FFFFFF"
+                    app:cardCornerRadius="60dp"
+                    app:cardElevation="0dp">
 
 
-                <ImageView
-                    android:id="@+id/imageViewList_rodent"
+                    <ImageView
+                        android:id="@+id/imageViewList_rodent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/rounded_image_view"
+                        android:cropToPadding="true"
+
+                        android:scaleType="centerCrop"
+                        android:src="@android:drawable/ic_menu_camera" />
+
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageButton
+                    android:id="@+id/buttonRodentsPetHealth"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:background="@drawable/rounded_image_view"
-                    android:cropToPadding="true"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/roundbutton_small_green"
+                    android:textColor="#FFFFFF"
+                    android:textSize="22sp"
+                    app:srcCompat="@drawable/ic_pet_health"
+                    app:strokeColor="#0375a8"
+                    app:strokeWidth="3dp"
+                    app:tint="#498A32" />
 
-                    android:scaleType="centerCrop"
-                    android:src="@android:drawable/ic_menu_camera" />
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Opieka"
+                    android:textAlignment="center"
+                    android:textColor="#014D70"
+                    android:textColorHint="#77147A"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
@@ -109,38 +149,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal"></LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/buttonRodentsPetHealth"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/roundbutton_small_green"
-                android:textColor="#FFFFFF"
-                android:textSize="22sp"
-                app:srcCompat="@drawable/ic_pet_health"
-                app:strokeColor="#0375a8"
-                app:strokeWidth="3dp"
-                app:tint="#498A32" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Opieka"
-                android:textAlignment="center"
-                android:textColor="#014D70"
-                android:textColorHint="#77147A"
-                android:textSize="16sp" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
