--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -48,11 +48,12 @@
 
                         <ImageButton
                             android:id="@+id/imageButtonQuestion_notifications1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
                             android:layout_marginStart="10dp"
                             android:background="@drawable/roundbutton_small"
                             android:padding="5dp"
+                            android:scaleType="centerInside"
                             android:src="@drawable/ic_question_mark"
                             app:tint="#0A4A97" />
 
@@ -129,11 +130,12 @@
 
                         <ImageButton
                             android:id="@+id/imageButtonQuestion_notifications2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
                             android:layout_marginStart="10dp"
                             android:background="@drawable/roundbutton_small"
                             android:padding="5dp"
+                            android:scaleType="centerInside"
                             android:src="@drawable/ic_question_mark"
                             app:tint="#0A4A97" />
 
@@ -216,23 +218,25 @@
 
                             <ImageButton
                                 android:id="@+id/imageButtonQuestion_notifications3"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
                                 android:layout_marginStart="10dp"
                                 android:background="@drawable/roundbutton_small"
                                 android:padding="5dp"
+                                android:scaleType="centerInside"
                                 android:src="@drawable/ic_question_mark"
                                 app:tint="#0A4A97" />
 
                             <ImageButton
                                 android:id="@+id/imageButtonVisit_notifications"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="5dp"
                                 android:background="@drawable/roundbutton_small"
                                 android:padding="5dp"
-                                android:src="@drawable/ic_calendar_vet1"
+                                android:scaleType="centerInside"
+                                android:src="@drawable/ic_calendar_vet"
                                 app:tint="#0A4A97" />
 
                         </LinearLayout>
