--- a/app/src/main/res/layout/activity_encyclopedia.xml
+++ b/app/src/main/res/layout/activity_encyclopedia.xml
@@ -165,16 +165,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonGeneral"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_general"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_general" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -234,16 +233,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonFood"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_food"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_food" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -302,16 +300,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonSupply"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
-                                    android:padding="15dp"
+                                    android:padding="10dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_supply"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_supply" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -374,16 +371,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonDisease"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_diseases"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_diseases" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
