--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -102,16 +102,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonOther_map"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
-                                    android:padding="15dp"
+                                    android:padding="14dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_map"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_map" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -170,16 +169,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonOther_notifications"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_notification"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_notification" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
