--- a/app/src/main/res/layout/activity_pet_health.xml
+++ b/app/src/main/res/layout/activity_pet_health.xml
@@ -46,52 +46,34 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <ImageButton
                                 android:id="@+id/imageButtonQuestion_petHealth"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
                                 android:layout_gravity="left"
                                 android:layout_marginStart="10dp"
                                 android:background="@drawable/roundbutton_small"
                                 android:padding="5dp"
+                                android:scaleType="centerInside"
                                 android:src="@drawable/ic_question_mark"
                                 app:tint="#0A4A97" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/textViewPetName_petHealth"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="20dp"
+                                android:layout_marginEnd="20dp"
                                 android:gravity="center"
                                 android:text="Wszystkie poniższe zakładki dotyczą tylko wybranego pupila o imieniu: "
                                 android:textColor="#014D70" />
-                        </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <ImageButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="10dp"
-                                android:background="@drawable/roundbutton_small"
-                                android:padding="5dp"
-                                android:src="@drawable/ic_question_mark"
-                                android:visibility="invisible"
-                                app:tint="#0A4A97" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -143,16 +125,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonPetHealth_weight"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_weight"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_weight" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -211,16 +192,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonPetHealth_notes"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_notes"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_notes" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -279,16 +259,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonVet1"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_vet"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_vet" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -347,16 +326,15 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonVisit"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_calendar_vet"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_calendar_v2" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -414,21 +392,20 @@
 
                                 <ImageView
                                     android:id="@+id/imageButtonMed"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_marginBottom="5dp"
                                     android:adjustViewBounds="true"
                                     android:background="@drawable/roundbutton"
                                     android:padding="15dp"
                                     android:scaleType="fitCenter"
-                                    app:srcCompat="@drawable/ic_medicine"
-                                    app:tint="#0A4A97" />
+                                    app:srcCompat="@drawable/ic_medicine" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Leki"
+                                    android:text="Lekarstwa"
                                     android:textColor="#014D70" />
 
                             </LinearLayout>
