--- a/app/src/main/res/layout/add_rodent.xml
+++ b/app/src/main/res/layout/add_rodent.xml
@@ -81,8 +81,9 @@
                         android:background="@drawable/rounded_image_view"
                         android:cropToPadding="true"
 
-                        android:scaleType="centerCrop"
-                        android:src="@android:drawable/ic_menu_camera" />
+                        android:padding="20dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_camera" />
 
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
@@ -217,12 +218,13 @@
 
             <ImageButton
                 android:id="@+id/imageButtonDate_rodent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_marginStart="10dp"
                 android:background="@drawable/roundbutton_small"
                 android:padding="5dp"
-                android:src="@drawable/ic_calendar_vet1"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_calendar_vet"
                 app:tint="#0A4A97" />
 
             <View
