--- a/app/src/main/res/layout/vets_item_list.xml
+++ b/app/src/main/res/layout/vets_item_list.xml
@@ -31,23 +31,61 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayoutCard_vet"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ACC5E1"
-            android:orientation="vertical"
-            tools:context="com.gryzoniopedia.rodentshelper.ROOM.Vet.ViewVets">
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rounded_cards"
+            android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/textView4"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Nazwa weterynarza:"
-                android:textColor="#014D70"
-                android:textColorHint="#77147A"
-                android:textSize="16sp" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Nazwa weterynarza:"
+                    android:textColor="#014D70"
+                    android:textColorHint="#77147A"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayoutED_vet"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:foregroundGravity="right"
+                    android:gravity="right"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/buttonEdit_vet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:layout_marginEnd="20dp"
+                        android:src="@drawable/ic_edit"
+                        app:tint="#0375a8" />
+
+                    <ImageView
+                        android:id="@+id/buttonDelete_vet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_bin"
+                        app:tint="#DC3E3E" />
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -246,17 +284,6 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/buttonEdit_vet"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="3dp"
-                    android:layout_weight="1"
-                    android:text="Edytuj"
-                    app:backgroundTint="#5397DF"
-                    app:strokeColor="#0375a8"
-                    app:strokeWidth="3dp" />
-
-                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonAdd_vet"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -281,24 +308,8 @@
                     app:strokeColor="#0375a8"
                     app:strokeWidth="3dp" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/buttonDelete_vet"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="3dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="#DC3E3E"
-                    android:text="Usuń"
-                    app:strokeColor="#9A2C2C"
-                    app:strokeWidth="3dp" />
             </LinearLayout>
 
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_margin="6dp"
-                android:background="#048FCD" />
 
         </LinearLayout>
 
