--- a/app/src/main/res/layout/weight_list.xml
+++ b/app/src/main/res/layout/weight_list.xml
@@ -74,22 +74,23 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/buttonEdit_weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_edit"
+                    app:tint="#0375a8" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/buttonEdit_weight"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-
-                        android:src="@drawable/ic_edit"
-                        app:tint="#0375a8" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -100,18 +101,20 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/buttonDelete_weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_bin"
+                    app:tint="#DC3E3E" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/buttonDelete_weight"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/ic_bin"
-                        app:tint="#DC3E3E" />
                 </LinearLayout>
             </LinearLayout>
 
