--- a/app/src/main/res/layout/add_rodent.xml
+++ b/app/src/main/res/layout/add_rodent.xml
@@ -81,8 +81,7 @@
                         android:background="@drawable/rounded_image_view"
                         android:cropToPadding="true"
 
-                        android:padding="20dp"
-                        android:scaleType="centerInside"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/ic_camera" />
 
                 </androidx.cardview.widget.CardView>
